processing rules asynchronously