@@ -1,36 +1,67 @@
 package project.first.spring.processData.service;
 
+import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.ComponentScan;
 import org.springframework.stereotype.Service;
+import project.first.spring.processData.config.RuleExecutorConfig;
 import project.first.spring.processData.model.enums.Rules;
 import project.first.spring.processData.model.pojos.ProcessedData;
 import project.first.spring.processData.rules.IStringListProcessRules;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.stream.Collectors;
 
 @Slf4j
 @Service
+@ComponentScan(value = {"project.first.spring.processData.config"})
 public class RuleBasedDataProcessingService {
 
     @Autowired
     private List<IStringListProcessRules> processingRules;
+    private ExecutorService executorService;
+    private final RuleExecutorConfig ruleExecutorConfig;
+    public RuleBasedDataProcessingService(final RuleExecutorConfig ruleExecutorConfig) {
+        this.ruleExecutorConfig = ruleExecutorConfig;
+    }
+    @PostConstruct
+    void init() {
+        executorService = Executors.newFixedThreadPool(ruleExecutorConfig.threadPoolSize());
+    }
 
     public List<ProcessedData> getSolutions(List<String> inputData, List<Rules> rulesToApply){
         List<ProcessedData> solutions = new ArrayList<>();
 
-       for (Rules ruleToApply : rulesToApply){
-           log.info("going to apply rule - {}", ruleToApply.name());
-           List<ProcessedData> processedDataList = processingRules.stream().map(rule -> rule.process(inputData, ruleToApply.name())).toList();
+        List<CompletableFuture<List<ProcessedData>>> futures = rulesToApply.stream()
+                .map(ruleToApply -> CompletableFuture.supplyAsync(() -> {
+                    log.info("going to apply rule - {}", ruleToApply.name());
+                    return processingRules.parallelStream()
+                            .map(rule -> rule.process(inputData, ruleToApply.name()))
+                            .filter(Objects::nonNull)
+                            .collect(Collectors.toList());
+                }, executorService)).toList();
 
-           processedDataList = processedDataList.stream().filter(Objects::nonNull).collect(Collectors.toList());
-           if (!processedDataList.isEmpty())
-               solutions.addAll(processedDataList);
-       }
+        List<ProcessedData> processedDataList = futures.stream()
+                .map(CompletableFuture::join)
+                .flatMap(Collection::stream).toList();
+
+        if (!processedDataList.isEmpty())
+            solutions.addAll(processedDataList);
 
        return solutions;
+    }
+
+    @PreDestroy
+    public void preDestroy() {
+        log.info("shutting down the rule process executor service");
+        executorService.shutdown();
     }
 }
